--- a/Golf Game/Golf Game.vcxproj
+++ b/Golf Game/Golf Game.vcxproj
@@ -19,11 +19,13 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Src\Ball.cpp" />
     <ClCompile Include="Src\Game.cpp" />
     <ClCompile Include="Src\main.cpp" />
     <ClCompile Include="Src\TextureManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Src\Ball.h" />
     <ClInclude Include="Src\Game.h" />
     <ClInclude Include="Src\TextureManager..h" />
   </ItemGroup>
