--- a/Golf Game/Golf Game.vcxproj.filters
+++ b/Golf Game/Golf Game.vcxproj.filters
@@ -4,9 +4,11 @@
     <ClCompile Include="Src\main.cpp" />
     <ClCompile Include="Src\Game.cpp" />
     <ClCompile Include="Src\TextureManager.cpp" />
+    <ClCompile Include="Src\Ball.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\Game.h" />
     <ClInclude Include="Src\TextureManager..h" />
+    <ClInclude Include="Src\Ball.h" />
   </ItemGroup>
 </Project>
