--- a/Golf Game/Golf Game.vcxproj.filters
+++ b/Golf Game/Golf Game.vcxproj.filters
@@ -5,10 +5,12 @@
     <ClCompile Include="Src\Game.cpp" />
     <ClCompile Include="Src\TextureManager.cpp" />
     <ClCompile Include="Src\Ball.cpp" />
+    <ClCompile Include="Src\Vector2D.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\Game.h" />
     <ClInclude Include="Src\TextureManager..h" />
     <ClInclude Include="Src\Ball.h" />
+    <ClInclude Include="Src\Vector2D.h" />
   </ItemGroup>
 </Project>
