Add Cursor class and basic game Controll

--- a/Golf Game/Golf Game.vcxproj.filters
+++ b/Golf Game/Golf Game.vcxproj.filters
@@ -6,11 +6,13 @@
     <ClCompile Include="Src\TextureManager.cpp" />
     <ClCompile Include="Src\Ball.cpp" />
     <ClCompile Include="Src\Vector2D.cpp" />
+    <ClCompile Include="Src\Cursor.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\Game.h" />
     <ClInclude Include="Src\TextureManager..h" />
     <ClInclude Include="Src\Ball.h" />
     <ClInclude Include="Src\Vector2D.h" />
+    <ClInclude Include="Src\Cursor.h" />
   </ItemGroup>
 </Project>
