--- a/Golf Game/Golf Game.vcxproj
+++ b/Golf Game/Golf Game.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\Ball.cpp" />
+    <ClCompile Include="Src\Cursor.cpp" />
     <ClCompile Include="Src\Game.cpp" />
     <ClCompile Include="Src\main.cpp" />
     <ClCompile Include="Src\TextureManager.cpp" />
@@ -28,6 +29,7 @@
   <ItemGroup>
     <ClInclude Include="Src\Ball.h" />
     <ClInclude Include="Src\Game.h" />
+    <ClInclude Include="Src\Cursor.h" />
     <ClInclude Include="Src\TextureManager..h" />
     <ClInclude Include="Src\Vector2D.h" />
   </ItemGroup>
