--- a/Golf Game/Golf Game.vcxproj
+++ b/Golf Game/Golf Game.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="Src\Ball.cpp" />
     <ClCompile Include="Src\Cursor.cpp" />
     <ClCompile Include="Src\Game.cpp" />
+    <ClCompile Include="Src\Hole.cpp" />
     <ClCompile Include="Src\main.cpp" />
     <ClCompile Include="Src\TextureManager.cpp" />
     <ClCompile Include="Src\Vector2D.cpp" />
@@ -30,6 +31,7 @@
     <ClInclude Include="Src\Ball.h" />
     <ClInclude Include="Src\Game.h" />
     <ClInclude Include="Src\Cursor.h" />
+    <ClInclude Include="Src\Hole.h" />
     <ClInclude Include="Src\TextureManager..h" />
     <ClInclude Include="Src\Vector2D.h" />
   </ItemGroup>
