--- a/Golf Game/Golf Game.vcxproj
+++ b/Golf Game/Golf Game.vcxproj
@@ -20,18 +20,22 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\Ball.cpp" />
+    <ClCompile Include="Src\Collision.cpp" />
     <ClCompile Include="Src\Cursor.cpp" />
     <ClCompile Include="Src\Game.cpp" />
     <ClCompile Include="Src\Hole.cpp" />
     <ClCompile Include="Src\main.cpp" />
+    <ClCompile Include="Src\Obstacle.cpp" />
     <ClCompile Include="Src\TextureManager.cpp" />
     <ClCompile Include="Src\Vector2D.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\Ball.h" />
+    <ClInclude Include="Src\Collision.h" />
     <ClInclude Include="Src\Game.h" />
     <ClInclude Include="Src\Cursor.h" />
     <ClInclude Include="Src\Hole.h" />
+    <ClInclude Include="Src\Obstacle.h" />
     <ClInclude Include="Src\TextureManager..h" />
     <ClInclude Include="Src\Vector2D.h" />
   </ItemGroup>
