--- a/Golf Game/Golf Game.vcxproj.filters
+++ b/Golf Game/Golf Game.vcxproj.filters
@@ -10,6 +10,9 @@
     <ClCompile Include="Src\Hole.cpp" />
     <ClCompile Include="Src\Collision.cpp" />
     <ClCompile Include="Src\Obstacle.cpp" />
+    <ClCompile Include="Src\Arrow.cpp" />
+    <ClCompile Include="Src\Tile.cpp" />
+    <ClCompile Include="Src\Map.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\Game.h" />
@@ -20,5 +23,8 @@
     <ClInclude Include="Src\Hole.h" />
     <ClInclude Include="Src\Collision.h" />
     <ClInclude Include="Src\Obstacle.h" />
+    <ClInclude Include="Src\Arrow.h" />
+    <ClInclude Include="Src\Tile.h" />
+    <ClInclude Include="Src\Map.h" />
   </ItemGroup>
 </Project>
