--- a/Golf Game/Golf Game.vcxproj
+++ b/Golf Game/Golf Game.vcxproj
@@ -26,8 +26,10 @@
     <ClCompile Include="Src\Game.cpp" />
     <ClCompile Include="Src\Hole.cpp" />
     <ClCompile Include="Src\main.cpp" />
+    <ClCompile Include="Src\Map.cpp" />
     <ClCompile Include="Src\Obstacle.cpp" />
     <ClCompile Include="Src\TextureManager.cpp" />
+    <ClCompile Include="Src\Tile.cpp" />
     <ClCompile Include="Src\Vector2D.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -37,8 +39,10 @@
     <ClInclude Include="Src\Game.h" />
     <ClInclude Include="Src\Cursor.h" />
     <ClInclude Include="Src\Hole.h" />
+    <ClInclude Include="Src\Map.h" />
     <ClInclude Include="Src\Obstacle.h" />
     <ClInclude Include="Src\TextureManager..h" />
+    <ClInclude Include="Src\Tile.h" />
     <ClInclude Include="Src\Vector2D.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
