--- a/Golf Game/Golf Game.vcxproj
+++ b/Golf Game/Golf Game.vcxproj
@@ -102,20 +102,20 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>F:\SDL\SDL2_image-2.8.5-VC\include;F:\SDL\SDL2-2.32.0-VC\include;$(IncludePath)</IncludePath>
-    <LibraryPath>F:\SDL\SDL2_image-2.8.5-VC\lib\x64;F:\SDL\SDL2-2.32.0-VC\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>F:\SDL\SDL2_ttf-2.24.0-VC\include;F:\SDL\SDL2_mixer-2.8.1-VC\include;F:\SDL\SDL2_image-2.8.5-VC\include;F:\SDL\SDL2-2.32.0-VC\include;$(IncludePath)</IncludePath>
+    <LibraryPath>F:\SDL\SDL2_ttf-2.24.0-VC\lib\x64;F:\SDL\SDL2_mixer-2.8.1-VC\lib\x64;F:\SDL\SDL2_image-2.8.5-VC\lib\x64;F:\SDL\SDL2-2.32.0-VC\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>F:\SDL\SDL2_image-2.8.5-VC\include;F:\SDL\SDL2-2.32.0-VC\include;$(IncludePath)</IncludePath>
-    <LibraryPath>F:\SDL\SDL2_image-2.8.5-VC\lib\x64;F:\SDL\SDL2-2.32.0-VC\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>F:\SDL\SDL2_ttf-2.24.0-VC\include;F:\SDL\SDL2_mixer-2.8.1-VC\include;F:\SDL\SDL2_image-2.8.5-VC\include;F:\SDL\SDL2-2.32.0-VC\include;$(IncludePath)</IncludePath>
+    <LibraryPath>F:\SDL\SDL2_ttf-2.24.0-VC\lib\x64;F:\SDL\SDL2_mixer-2.8.1-VC\lib\x64;F:\SDL\SDL2_image-2.8.5-VC\lib\x64;F:\SDL\SDL2-2.32.0-VC\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>F:\SDL\SDL2_image-2.8.5-VC\include;F:\SDL\SDL2-2.32.0-VC\include;$(IncludePath)</IncludePath>
-    <LibraryPath>F:\SDL\SDL2_image-2.8.5-VC\lib\x64;F:\SDL\SDL2-2.32.0-VC\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>F:\SDL\SDL2_ttf-2.24.0-VC\include;F:\SDL\SDL2_mixer-2.8.1-VC\include;F:\SDL\SDL2_image-2.8.5-VC\include;F:\SDL\SDL2-2.32.0-VC\include;$(IncludePath)</IncludePath>
+    <LibraryPath>F:\SDL\SDL2_ttf-2.24.0-VC\lib\x64;F:\SDL\SDL2_mixer-2.8.1-VC\lib\x64;F:\SDL\SDL2_image-2.8.5-VC\lib\x64;F:\SDL\SDL2-2.32.0-VC\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>F:\SDL\SDL2_image-2.8.5-VC\include;F:\SDL\SDL2-2.32.0-VC\include;$(IncludePath)</IncludePath>
-    <LibraryPath>F:\SDL\SDL2_image-2.8.5-VC\lib\x64;F:\SDL\SDL2-2.32.0-VC\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>F:\SDL\SDL2_ttf-2.24.0-VC\include;F:\SDL\SDL2_mixer-2.8.1-VC\include;F:\SDL\SDL2_image-2.8.5-VC\include;F:\SDL\SDL2-2.32.0-VC\include;$(IncludePath)</IncludePath>
+    <LibraryPath>F:\SDL\SDL2_ttf-2.24.0-VC\lib\x64;F:\SDL\SDL2_mixer-2.8.1-VC\lib\x64;F:\SDL\SDL2_image-2.8.5-VC\lib\x64;F:\SDL\SDL2-2.32.0-VC\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -123,13 +123,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>F:\SDL\SDL2_image-2.8.5-VC\include;F:\SDL\SDL2-2.32.0-VC\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>F:\SDL\SDL2_ttf-2.24.0-VC;F:\SDL\SDL2_mixer-2.8.1-VC;F:\SDL\SDL2_image-2.8.5-VC\include;F:\SDL\SDL2-2.32.0-VC\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>F:\SDL\SDL2_image-2.8.5-VC\lib\x64;F:\SDL\SDL2-2.32.0-VC\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2main.lib;SDL2.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>F:\SDL\SDL2_ttf-2.24.0-VC\lib\x64;F:\SDL\SDL2_mixer-2.8.1-VC\lib\x64;F:\SDL\SDL2_image-2.8.5-VC\lib\x64;F:\SDL\SDL2-2.32.0-VC\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2main.lib;SDL2.lib;SDL2_image.lib;SDL2_mixer.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -140,15 +140,15 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>F:\SDL\SDL2_image-2.8.5-VC\include;F:\SDL\SDL2-2.32.0-VC\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>F:\SDL\SDL2_ttf-2.24.0-VC;F:\SDL\SDL2_mixer-2.8.1-VC;F:\SDL\SDL2_image-2.8.5-VC\include;F:\SDL\SDL2-2.32.0-VC\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>F:\SDL\SDL2_image-2.8.5-VC\lib\x64;F:\SDL\SDL2-2.32.0-VC\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2main.lib;SDL2.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>F:\SDL\SDL2_ttf-2.24.0-VC\lib\x64;F:\SDL\SDL2_mixer-2.8.1-VC\lib\x64;F:\SDL\SDL2_image-2.8.5-VC\lib\x64;F:\SDL\SDL2-2.32.0-VC\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2main.lib;SDL2.lib;SDL2_image.lib;SDL2_mixer.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -157,13 +157,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>F:\SDL\SDL2_image-2.8.5-VC\include;F:\SDL\SDL2-2.32.0-VC\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>F:\SDL\SDL2_ttf-2.24.0-VC;F:\SDL\SDL2_mixer-2.8.1-VC;F:\SDL\SDL2_image-2.8.5-VC\include;F:\SDL\SDL2-2.32.0-VC\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>F:\SDL\SDL2_image-2.8.5-VC\lib\x64;F:\SDL\SDL2-2.32.0-VC\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2main.lib;SDL2.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>F:\SDL\SDL2_ttf-2.24.0-VC\lib\x64;F:\SDL\SDL2_mixer-2.8.1-VC\lib\x64;F:\SDL\SDL2_image-2.8.5-VC\lib\x64;F:\SDL\SDL2-2.32.0-VC\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2main.lib;SDL2.lib;SDL2_image.lib;SDL2_mixer.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -174,15 +174,15 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>F:\SDL\SDL2_image-2.8.5-VC\include;F:\SDL\SDL2-2.32.0-VC\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>F:\SDL\SDL2_ttf-2.24.0-VC;F:\SDL\SDL2_mixer-2.8.1-VC;F:\SDL\SDL2_image-2.8.5-VC\include;F:\SDL\SDL2-2.32.0-VC\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>F:\SDL\SDL2_image-2.8.5-VC\lib\x64;F:\SDL\SDL2-2.32.0-VC\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2main.lib;SDL2.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>F:\SDL\SDL2_ttf-2.24.0-VC\lib\x64;F:\SDL\SDL2_mixer-2.8.1-VC\lib\x64;F:\SDL\SDL2_image-2.8.5-VC\lib\x64;F:\SDL\SDL2-2.32.0-VC\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2main.lib;SDL2.lib;SDL2_image.lib;SDL2_mixer.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
