--- a/Golf Game/Golf Game.vcxproj
+++ b/Golf Game/Golf Game.vcxproj
@@ -20,7 +20,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\Arrow.cpp" />
+    <ClCompile Include="Src\Background.cpp" />
     <ClCompile Include="Src\Ball.cpp" />
+    <ClCompile Include="Src\Button.cpp" />
     <ClCompile Include="Src\Collision.cpp" />
     <ClCompile Include="Src\Cursor.cpp" />
     <ClCompile Include="Src\Game.cpp" />
@@ -35,7 +37,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\Arrow.h" />
+    <ClInclude Include="Src\Background.h" />
     <ClInclude Include="Src\Ball.h" />
+    <ClInclude Include="Src\Button.h" />
     <ClInclude Include="Src\Collision.h" />
     <ClInclude Include="Src\Game.h" />
     <ClInclude Include="Src\Cursor.h" />
