--- a/Golf Game/Golf Game.vcxproj
+++ b/Golf Game/Golf Game.vcxproj
@@ -30,6 +30,7 @@
     <ClCompile Include="Src\main.cpp" />
     <ClCompile Include="Src\Map.cpp" />
     <ClCompile Include="Src\Obstacle.cpp" />
+    <ClCompile Include="Src\PowerBar.cpp" />
     <ClCompile Include="Src\TextureManager.cpp" />
     <ClCompile Include="Src\Tile.cpp" />
     <ClCompile Include="Src\Utilities.cpp" />
@@ -46,6 +47,7 @@
     <ClInclude Include="Src\Hole.h" />
     <ClInclude Include="Src\Map.h" />
     <ClInclude Include="Src\Obstacle.h" />
+    <ClInclude Include="Src\PowerBar.h" />
     <ClInclude Include="Src\TextureManager..h" />
     <ClInclude Include="Src\Tile.h" />
     <ClInclude Include="Src\Utilities.h" />
